syntax = "proto3";

service api {
   rpc add(AddRequest) returns (AddResponse);
   rpc search(SearchRequest) returns (SearchResponse);
   rpc setSchema(SetSchemaRequest) returns (SetSchemaResponse);
   rpc wipe(WipeRequest) returns (WipeResponse);
}

message AddRequest {
    Entry entry = 1;
}

message AddResponse {
}

message Entry {
    string tags = 1;
    string title = 2;
    string uid = 3;
    string uri = 4;
}

message SearchRequest {
    repeated string tags = 1;
    int32 first = 2;
    string after = 3;
}

message SearchResponse {
    repeated Entry entries = 1;
}

message SetSchemaRequest {
    string schema = 1;
}

message SetSchemaResponse {
}

message WipeRequest {
}

message WipeResponse {
}
